@@ -1,3 +1,8 @@
+/**
+ * @file better_exposed_filters.js
+ * 
+ * Provides some client-side functionality for the Better Exposed Filters module
+ */
 (function ($) {
   Drupal.behaviors.better_exposed_filters = { 
     attach: function() {
