@@ -147,7 +147,7 @@ function theme_select_as_hidden($vars) {
       // Only render fields for selected values -- no selected values renders zero fields
       if (array_search($key, $selected_options) !== FALSE) {
         // Custom ID for each hidden field based on the <select>'s original ID
-        $id = form_clean_id($element['#id'] . '-' . $key);
+        $id = drupal_html_id($element['#id'] . '-' . $key);
 
         // Very similar to theme_hidden (http://api.drupal.org/api/function/theme_hidden/6)
         $hidden = '<input type="hidden" '
@@ -337,11 +337,41 @@ function theme_select_as_links($vars) {
   
   $output = '';
   $name = $element['#name'];
-  $selected_options = empty($element['#value']) ? $element['#default_value'] : $element['#value'];
-  if (empty($_REQUEST[$name])) {
-    $selected_options[] = $element["#$name"];
+  
+  // Collect selected values so we can properly style the links later
+  $selected_options = array();
+  if (empty($element['#value'])) {
+    if (!empty($element['#default_values'])) {
+      $selected_options[] = $element['#default_values'];
+    }
   }
-
+  else {
+    $selected_options[] = $element['#value'];
+  }
+  
+  // Add to the selected options specified by Views whatever options are in the 
+  // URL query string, but only for this filter
+  $urllist = parse_url(request_uri());
+  if (isset($urllist['query'])) {
+    $query = array();
+    parse_str(urldecode($urllist['query']), $query);
+    foreach ($query as $key => $value) {
+      if ($key != $name) {
+        continue;
+      }
+      if (is_array($value)) {
+        // This filter allows multiple selections, so put each one on the selected_options array
+        foreach ($value as $option) {
+          $selected_options[] = $option;
+        }
+      }
+      else {
+        $selected_options[] = $value;
+      }
+    }
+  }
+  
+  // Go through each filter option and build the appropriate link or plain text
   foreach ($element['#options'] as $option => $elem) {
     // Check for Taxonomy-based filters
     if (is_object($elem)) {
@@ -365,24 +395,28 @@ function theme_select_as_links($vars) {
 
     foreach ($element_set as $key => $value) {
       // Custom ID for each link based on the <select>'s original ID
-      $id = form_clean_id($element['#id'] . '-' . $key);
+      $id = drupal_html_id($element['#id'] . '-' . $key);
       if (array_search($key, $selected_options) === FALSE) {
         $link = l($value, bef_replace_query_string_arg($name, $key, $multiple));
         $output .= theme('form_element', array('element' => array('#id' => $id, '#children' => $link)));
       } else {
         // Selected value is output without a link
-        // TODO: Does that look funny in the display?  Should add a "current" class to this elem?
-        $output .= theme('form_element', array('element' => array('#id' => $id, '#children' => $value)));
+        // TODO: add link to remove this option from the filter?
+        $elem = array(
+          '#id' => $id, 
+          '#children' => $value,
+        );
+        _form_set_class($elem, array('bef-select-as-links-selected'));
+        $output .= theme('form_element', array('element' => $elem));
       }
     }
   }
 
   $properties = array(
-    '#title' => $element['#title'],
-    '#description' => $element['#description'],
+    '#description' => isset($element['#description']) ? $element['#description'] : '',
     '#children' => $output,
   );
-  
+
   return '<div class="bef-select-as-links">'
     . theme('form_element', array('element' => $properties))
     . '</div>';
@@ -434,15 +468,19 @@ function bef_checkbox($element, $value, $label, $selected) {
  */
 function bef_replace_query_string_arg($key, $value, $multiple = FALSE) {
   $path = arg();
-  $urllist = parse_url(request_uri());
+
+  // Prevents us from having to check for each index from parse_url that we may use
+  $urllist = array('path' => '', 'fragment' => '', 'query' => '');
+  $urllist = array_merge($urllist, parse_url(request_uri()));
   $fragment = urldecode($urllist['fragment']);
   $query = array();
   parse_str(urldecode($urllist['query']), $query);
-  if (is_array($query[$key])) {
-    // multiple values allowed for this key
+  if (isset($query[$key]) && is_array($query[$key])) {
+    // multiple values allowed for this existing key
     $query[$key][] = $value;
   }
   else {
+    // Create a new key
     if ($multiple) {
       $query[$key] = array($value);
     }
@@ -451,7 +489,7 @@ function bef_replace_query_string_arg($key, $value, $multiple = FALSE) {
     }
   }
   return url(implode('/', $path), array(
-    'query' => drupal_query_string_encode($query),
+    'query' => $query,
     'fragment' => $fragment,
     'absolute' => TRUE,
   ));
